--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -2,6 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>testdata</th>\n",
+       "      <th>werkt dit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   testdata  werkt dit\n",
+       "0        20         11"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import base64\n",
+    "import pandas as pd\n",
+    "\n",
+    "def create_onedrive_directdownload (onedrive_link):\n",
+    "    data_bytes64 = base64.b64encode(bytes(onedrive_link, 'utf-8'))\n",
+    "    data_bytes64_String = data_bytes64.decode('utf-8').replace('/','_').replace('+','-').rstrip(\"=\")\n",
+    "    resultUrl = f\"https://api.onedrive.com/v1.0/shares/u!{data_bytes64_String}/root/content\"\n",
+    "    return resultUrl\n",
+    "\n",
+    "onedrive_url = \"https://1drv.ms/x/s!Avnf_07fKpTXiVCCyUr_P40FhuNf?e=wL2j3t\"\n",
+    "converted_url = create_onedrive_directdownload(onedrive_url)\n",
+    "pd.read_excel(converted_url)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
