--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyrebase"
+    "import pyrebase\n",
+    "\n",
+    "firebase = pyrebase.initialize_app(config)"
    ]
   }
  ],
