--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -86,9 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'kind': 'identitytoolkit#GetOobConfirmationCodeResponse',\n",
+       " 'email': 'sebastien.mauroo@outlook.com'}"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "auth.send_password_reset_email(\"sebastien.mauroo@outlook.com\")"
    ]
