fix authentication object bug

--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -81,12 +81,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "auth.send_email_verification(signin['idToken'])"
+    "firebase.auth().send_email_verification(signin['idToken'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -96,13 +96,13 @@
        " 'email': 'sebastien.mauroo@outlook.com'}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "auth.send_password_reset_email(\"sebastien.mauroo@outlook.com\")"
+    "firebase.auth().send_password_reset_email(\"sebastien.mauroo@outlook.com\")"
    ]
   },
   {
