create new account screen added

--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = auth.create_user_with_email_and_password(\"sebastien.mauroo@outlook.com\",\"123456\")"
+    "user = auth.create_user_with_email_and_password(\"sebastien.mauroo@patrick.com\",\"123456\")"
    ]
   },
   {
