--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import pyrebase\n",
     "import json\n",
+    "import pandas as pd\n",
     "\n",
     "with open('../.streamlit/secrets.txt') as f:\n",
     "    lines = f.read()\n",
@@ -157,6 +158,266 @@
    "source": [
     "data = {\"name\": \"Mortimer 'Morty' Smith\"}\n",
     "db.child(\"test\").set(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = pd.read_csv(\"Verbruikshistoriek_elektriciteit_541448860008410850_20221014_20230227_kwartiertotalen.csv\",delimiter=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Van Datum</th>\n",
+       "      <th>Van Tijdstip</th>\n",
+       "      <th>Tot Datum</th>\n",
+       "      <th>Tot Tijdstip</th>\n",
+       "      <th>EAN</th>\n",
+       "      <th>Meter</th>\n",
+       "      <th>Metertype</th>\n",
+       "      <th>Register</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Eenheid</th>\n",
+       "      <th>Validatiestatus</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Geen verbruik</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Geen verbruik</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0,093</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0,000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:45:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0,120</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26115</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:15:00</td>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0,000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26116</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:30:00</td>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0,125</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26117</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:30:00</td>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0,000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26118</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>27-02-2023</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0,126</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26119</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>27-02-2023</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0,000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26120 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Van Datum Van Tijdstip   Tot Datum Tot Tijdstip  \\\n",
+       "0      14-10-2022     00:00:00  14-10-2022     00:15:00   \n",
+       "1      14-10-2022     00:00:00  14-10-2022     00:15:00   \n",
+       "2      14-10-2022     00:15:00  14-10-2022     00:30:00   \n",
+       "3      14-10-2022     00:15:00  14-10-2022     00:30:00   \n",
+       "4      14-10-2022     00:30:00  14-10-2022     00:45:00   \n",
+       "...           ...          ...         ...          ...   \n",
+       "26115  26-02-2023     23:15:00  26-02-2023     23:30:00   \n",
+       "26116  26-02-2023     23:30:00  26-02-2023     23:45:00   \n",
+       "26117  26-02-2023     23:30:00  26-02-2023     23:45:00   \n",
+       "26118  26-02-2023     23:45:00  27-02-2023     00:00:00   \n",
+       "26119  26-02-2023     23:45:00  27-02-2023     00:00:00   \n",
+       "\n",
+       "                         EAN           Meter       Metertype        Register  \\\n",
+       "0      =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "1      =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "2      =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "3      =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "4      =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "...                      ...             ...             ...             ...   \n",
+       "26115  =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "26116  =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "26117  =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "26118  =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "26119  =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "\n",
+       "      Volume Eenheid Validatiestatus  \n",
+       "0        NaN     kWh   Geen verbruik  \n",
+       "1        NaN     kWh   Geen verbruik  \n",
+       "2      0,093     kWh     Gevalideerd  \n",
+       "3      0,000     kWh     Gevalideerd  \n",
+       "4      0,120     kWh     Gevalideerd  \n",
+       "...      ...     ...             ...  \n",
+       "26115  0,000     kWh     Gevalideerd  \n",
+       "26116  0,125     kWh     Gevalideerd  \n",
+       "26117  0,000     kWh     Gevalideerd  \n",
+       "26118  0,126     kWh     Gevalideerd  \n",
+       "26119  0,000     kWh     Gevalideerd  \n",
+       "\n",
+       "[26120 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt"
    ]
   }
  ],
