--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,11 +152,34 @@
     "######injection analysis\n",
     "\n",
     "#Estimated solar capacity\n",
-    "var1 = dt[dt['Register'].str.contains('Injectie')]['Volume'].nlargest(3) ###largest 3 injectinos\n",
+    "var1 = dt[dt['Register'].str.contains('Afname')]['Volume'].nlargest(3) ###largest 3 injectinos\n",
     "Estimated_generation_capacity = var1.mean()*60/Time_unit ###60/Time_unit converts kWh towards kW\n",
     "\n",
     "#Has solar panels\n",
     "Has_solar_panels = True if Estimated_generation_capacity >= 0.6 else False  ###2 solar panels = +-600W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18148    1.212\n",
+       "14506    1.209\n",
+       "4922     1.173\n",
+       "Name: Volume, dtype: float64"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt[dt['Register'].str.contains('Afname')]['Volume'].nlargest(3) ###largest 3 injectinos"
    ]
   },
   {
