--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,20 +106,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Van Datum</th>\n",
+       "      <th>Van Tijdstip</th>\n",
+       "      <th>Tot Datum</th>\n",
+       "      <th>Tot Tijdstip</th>\n",
+       "      <th>EAN</th>\n",
+       "      <th>Meter</th>\n",
+       "      <th>Metertype</th>\n",
+       "      <th>Register</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Eenheid</th>\n",
+       "      <th>Validatiestatus</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Geen verbruik</td>\n",
+       "      <td>2022-10-14 00:00:00</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Geen verbruik</td>\n",
+       "      <td>2022-10-14 00:00:00</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0.093</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "      <td>2022-10-14 00:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "      <td>2022-10-14 00:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:45:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2022-10-14 00:30:00</td>\n",
+       "      <td>2022-10-14 00:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26115</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:15:00</td>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2023-02-26 23:15:00</td>\n",
+       "      <td>2023-02-26 23:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26116</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:30:00</td>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2023-02-26 23:30:00</td>\n",
+       "      <td>2023-02-26 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26117</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:30:00</td>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2023-02-26 23:30:00</td>\n",
+       "      <td>2023-02-26 23:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26118</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>27-02-2023</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0.126</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2023-02-26 23:45:00</td>\n",
+       "      <td>2023-02-27 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26119</th>\n",
+       "      <td>26-02-2023</td>\n",
+       "      <td>23:45:00</td>\n",
+       "      <td>27-02-2023</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2023-02-26 23:45:00</td>\n",
+       "      <td>2023-02-27 00:00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26120 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Van Datum Van Tijdstip   Tot Datum Tot Tijdstip  \\\n",
+       "0      14-10-2022     00:00:00  14-10-2022     00:15:00   \n",
+       "1      14-10-2022     00:00:00  14-10-2022     00:15:00   \n",
+       "2      14-10-2022     00:15:00  14-10-2022     00:30:00   \n",
+       "3      14-10-2022     00:15:00  14-10-2022     00:30:00   \n",
+       "4      14-10-2022     00:30:00  14-10-2022     00:45:00   \n",
+       "...           ...          ...         ...          ...   \n",
+       "26115  26-02-2023     23:15:00  26-02-2023     23:30:00   \n",
+       "26116  26-02-2023     23:30:00  26-02-2023     23:45:00   \n",
+       "26117  26-02-2023     23:30:00  26-02-2023     23:45:00   \n",
+       "26118  26-02-2023     23:45:00  27-02-2023     00:00:00   \n",
+       "26119  26-02-2023     23:45:00  27-02-2023     00:00:00   \n",
+       "\n",
+       "                         EAN           Meter       Metertype        Register  \\\n",
+       "0      =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "1      =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "2      =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "3      =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "4      =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "...                      ...             ...             ...             ...   \n",
+       "26115  =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "26116  =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "26117  =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "26118  =\"541448860008410850\"  1SAG3100010760  Digitale Meter    Afname Nacht   \n",
+       "26119  =\"541448860008410850\"  1SAG3100010760  Digitale Meter  Injectie Nacht   \n",
+       "\n",
+       "       Volume Eenheid Validatiestatus          start_time            end_time  \n",
+       "0         NaN     kWh   Geen verbruik 2022-10-14 00:00:00 2022-10-14 00:15:00  \n",
+       "1         NaN     kWh   Geen verbruik 2022-10-14 00:00:00 2022-10-14 00:15:00  \n",
+       "2       0.093     kWh     Gevalideerd 2022-10-14 00:15:00 2022-10-14 00:30:00  \n",
+       "3       0.000     kWh     Gevalideerd 2022-10-14 00:15:00 2022-10-14 00:30:00  \n",
+       "4       0.120     kWh     Gevalideerd 2022-10-14 00:30:00 2022-10-14 00:45:00  \n",
+       "...       ...     ...             ...                 ...                 ...  \n",
+       "26115   0.000     kWh     Gevalideerd 2023-02-26 23:15:00 2023-02-26 23:30:00  \n",
+       "26116   0.125     kWh     Gevalideerd 2023-02-26 23:30:00 2023-02-26 23:45:00  \n",
+       "26117   0.000     kWh     Gevalideerd 2023-02-26 23:30:00 2023-02-26 23:45:00  \n",
+       "26118   0.126     kWh     Gevalideerd 2023-02-26 23:45:00 2023-02-27 00:00:00  \n",
+       "26119   0.000     kWh     Gevalideerd 2023-02-26 23:45:00 2023-02-27 00:00:00  \n",
+       "\n",
+       "[26120 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "###get start period\n",
-    "dt['start_time'] = pd.to_datetime(dt.iloc[:,0] + \" \" + dt.iloc[:,1])\n",
-    "\n",
-    "###get end period\n",
-    "dt['end_time'] = pd.to_datetime(dt.iloc[:,2] + \" \" + dt.iloc[:,3])"
+    "dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###get start period\n",
+    "dt['start_time'] = pd.to_datetime(dt.iloc[:,0] + \" \" + dt.iloc[:,1],format='%d-%m-%Y %H:%M:%S')\n",
+    "\n",
+    "###get end period\n",
+    "dt['end_time'] = pd.to_datetime(dt.iloc[:,2] + \" \" + dt.iloc[:,3],format='%d-%m-%Y %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
