why doesn't metermac work

--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -220,6 +220,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_existing_meter_macs = list(db.child(\"metermac\").shallow().get().val()) ##get all key values (shallow), and then make a readable list out of the val() you read\n",
+    "\"acbfbd98240\" in all_existing_meter_macs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
    "outputs": [
