--- a/analysis/notebook.ipynb
+++ b/analysis/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,16 +270,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Van Datum</th>\n",
+       "      <th>Van Tijdstip</th>\n",
+       "      <th>Tot Datum</th>\n",
+       "      <th>Tot Tijdstip</th>\n",
+       "      <th>EAN</th>\n",
+       "      <th>Meter</th>\n",
+       "      <th>Metertype</th>\n",
+       "      <th>Register</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Eenheid</th>\n",
+       "      <th>Validatiestatus</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Geen verbruik</td>\n",
+       "      <td>2022-10-14 00:00:00</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Geen verbruik</td>\n",
+       "      <td>2022-10-14 00:00:00</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0.093</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "      <td>2022-10-14 00:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Injectie Nacht</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2022-10-14 00:15:00</td>\n",
+       "      <td>2022-10-14 00:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:30:00</td>\n",
+       "      <td>14-10-2022</td>\n",
+       "      <td>00:45:00</td>\n",
+       "      <td>=\"541448860008410850\"</td>\n",
+       "      <td>1SAG3100010760</td>\n",
+       "      <td>Digitale Meter</td>\n",
+       "      <td>Afname Nacht</td>\n",
+       "      <td>0.120</td>\n",
+       "      <td>kWh</td>\n",
+       "      <td>Gevalideerd</td>\n",
+       "      <td>2022-10-14 00:30:00</td>\n",
+       "      <td>2022-10-14 00:45:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Van Datum Van Tijdstip   Tot Datum Tot Tijdstip                    EAN  \\\n",
+       "0  14-10-2022     00:00:00  14-10-2022     00:15:00  =\"541448860008410850\"   \n",
+       "1  14-10-2022     00:00:00  14-10-2022     00:15:00  =\"541448860008410850\"   \n",
+       "2  14-10-2022     00:15:00  14-10-2022     00:30:00  =\"541448860008410850\"   \n",
+       "3  14-10-2022     00:15:00  14-10-2022     00:30:00  =\"541448860008410850\"   \n",
+       "4  14-10-2022     00:30:00  14-10-2022     00:45:00  =\"541448860008410850\"   \n",
+       "\n",
+       "            Meter       Metertype        Register  Volume Eenheid  \\\n",
+       "0  1SAG3100010760  Digitale Meter    Afname Nacht     NaN     kWh   \n",
+       "1  1SAG3100010760  Digitale Meter  Injectie Nacht     NaN     kWh   \n",
+       "2  1SAG3100010760  Digitale Meter    Afname Nacht   0.093     kWh   \n",
+       "3  1SAG3100010760  Digitale Meter  Injectie Nacht   0.000     kWh   \n",
+       "4  1SAG3100010760  Digitale Meter    Afname Nacht   0.120     kWh   \n",
+       "\n",
+       "  Validatiestatus          start_time            end_time  \n",
+       "0   Geen verbruik 2022-10-14 00:00:00 2022-10-14 00:15:00  \n",
+       "1   Geen verbruik 2022-10-14 00:00:00 2022-10-14 00:15:00  \n",
+       "2     Gevalideerd 2022-10-14 00:15:00 2022-10-14 00:30:00  \n",
+       "3     Gevalideerd 2022-10-14 00:15:00 2022-10-14 00:30:00  \n",
+       "4     Gevalideerd 2022-10-14 00:30:00 2022-10-14 00:45:00  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dt"
+    "dt.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +456,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1SAG3100010760'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Meter_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
